--- a/pages/style2/index.wxml
+++ b/pages/style2/index.wxml
@@ -1,4 +1,4 @@
 <!--index.wxml-->
 <import src="../area/area.wxml"/>
 <template is="area" data="{{areaData}}" />
-<button bindtap='getAreaInfo'>保存</button>
+<button bindtap='getAreaInfo' class='save-area-btn'>保存</button>
