--- a/pages/district/district.wxss
+++ b/pages/district/district.wxss
@@ -1,12 +1,14 @@
 .district-section-wrap {
-    display: flex;
-}
-.district-section-wrap {
-    display: flex;
-    flex-flow: row nowrap;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background: #fefefe;
 }
 .district-section {
-    flex: 1;
+    width: 100%;
 }
 #province,
 #city,
@@ -20,17 +22,6 @@
     font-size: 34rpx;
     padding: 0 26rpx;
     font-family: '微软雅黑';
-    border-bottom: 1px solid #ccc;
-}
-#province {
-    background: #fff;
     color: #666;
-}
-#city {
-    background: #fff;
-    color: #808080;
-}
-#district {
-    background: #ffffff;
-    color: #999;
+    border-bottom: 1px solid #ccc;
 }
