--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,17 +1,17 @@
 <view class="title">
    <view class="area_label">未选择城市：</view>
-    <input class="area_input"  value="" /> 
+    <input class="area_input"  value="{{areaInfo}}" /> 
 </view>
 <navigator url="../style1/index" >
-    <view class="area_type_list">
-        <view class="area_type_img"></view>
+    <view class="area_type_list area_type_active">
+        <image src="../../images/2_8.png" class="area_type_img"></image>
         <view class="area_type_txt">样式一</view>
         <image class="area_type_arrow" src="../../images/1_6.png" ></image>
     </view>
 </navigator>
 <navigator url="../style2/index" >
     <view class="area_type_list" >
-        <view class="area_type_img"></view>
+        <image src="../../images/2_9.png" class="area_type_img"></image>
         <view class="area_type_txt">样式二</view>
         <image class="area_type_arrow" src="../../images/1_6.png" ></image>
     </view>
