央视二的逻辑调整

--- a/pages/area/area.wxml
+++ b/pages/area/area.wxml
@@ -15,7 +15,7 @@
                 <image class="area_arrow" src="../../images/1_7.png" ></image>
             </view>
         </view>
-        <view class='area-section-group'>
+        <view class='area-section-group' wx:if="{{areaData.districtShow}}">
             <view class='area_label'>区/县：</view>
             <view class='area_input' id='district' bindtap='showArea'>
                 {{areaData.district.name}}
