--- a/pages/area/area.wxss
+++ b/pages/area/area.wxss
@@ -34,7 +34,7 @@
     z-index: 2;
     width: 100%;
     height: 100vh;
-    background: rgba(235,235, 235, 0.8)
+    background: rgba(235,235, 235, 0.95)
 }
 .area_name{
     padding: 30rpx 0;
@@ -42,6 +42,7 @@
     font-family: '微软雅黑';
     font-size: 36rpx;
     color: #666;
+    border-bottom: 1px solid #ccc;
 }
 .close-area-list{
     padding: 30rpx 34rpx;
