--- a/pages/style2/index.wxml
+++ b/pages/style2/index.wxml
@@ -1,3 +1,8 @@
+<!--
+HotCity城市选择器由HotApp小程序统计团队开发并开源：https://github.com/hotapp888/hotcity
+城市完整SQL下载地址和API接口文档说明：http://wenda.hotapp.cn/article/3
+小程序交流学习QQ群173063969
+-->
 <!--index.wxml-->
 <import src="../area/area.wxml"/>
 <template is="area" data="{{areaData}}" />
