--- a/pages/style1/index.wxml
+++ b/pages/style1/index.wxml
@@ -6,3 +6,15 @@ HotCity城市选择器由HotApp小程序统计团队开发并开源：https://gi
 <!--index.wxml-->
 <import src="../district/district.wxml"/>
 <template is="district" data="{{districts}}" />
+
+<view class="get-provinces" bindtap="getProvinces">点击选择行政区</view>
+<view class='district-info'>
+    <view class='district-info-left'>
+        <view>{{districts.selectedProvince ? "您选择的是：" : "您还未选择："}}</view>
+    </view>
+    <view  class='district-info-right'>
+        <view class='district-info-detail {{districts.selectedProvince ? "active" : ""}}'>{{ districts.selectedProvince }}</view>
+        <view class='district-info-detail {{districts.selectedCity ? "active" : ""}} '>{{ districts.selectedCity }}</view>
+        <view class='district-info-detail {{districts.selectedDistrict ? "active" : ""}}'>{{ districts.selectedDistrict }}</view>
+    </view>
+</view>
